# gf-metadata

./: Cargo.toml  README.md
.github/workflows/: check-protos.yml  rust.yml
gf-metadata/: Cargo.toml  README.md
gf-metadata/src/: lib.rs  mod.rs
resources/scripts/: embed_data.proto  protoc.sh
resources/testdata/: kosugimaru-metadata.pb
src/: axes.rs  designers.rs  fonts_public.rs  languages_public.rs  lib.rs
test_read_gf_metadata/: Cargo.toml
test_read_gf_metadata/src/: main.rs
