[workspace.dependencies]

# external deps
protobuf = "3.7.2"
home = "0.5.11"
regex = "1.11.1"
walkdir = "2.5.0"
clap = { version = "4.5.37", features = ["derive"] }
embed_anything = "0.5.5"

# dev dependencies

[workspace]
resolver = "2"

members = [
    "gf-metadata",
    "read-gf-metadata",
    "make_test_images",
    "gf-embed",
    "make_embedding",
    "query_embedding",
]

