[package]
name = "gf-metadata"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
description = "A metadata reader for Google Fonts."
repository = "https://github.com/googlefonts/gf-metadata"
readme = "README.md"
categories = []

[dependencies]
protobuf = "3.7.2"
regex = "1.11.1"
walkdir = "2.5.0"
google-fonts-languages = "0.7.7"
