[package]
name = "gf-metadata"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A metadata reader for Google Fonts."
repository = "https://github.com/rsheeter/embed1"
readme = "README.md"
categories = ["google-fonts"]

[dependencies]
protobuf.workspace = true
regex.workspace = true
walkdir.workspace = true
